--- a/index.html
+++ b/index.html
@@ -1,83 +1,82 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Mirrored from teslatheater.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 20 Jan 2020 17:56:10 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <link rel="stylesheet" href="c.css">
+  <title>Tesla Theatre</title>
 </head>
 <body>
-
-<div>
-
-  <a href="https://weather.com/en-CA/weather/today/l/CAXX0679:1:CA">
-    <figure onMouseUp="return showLoader()">
-      <img src="weather.png">
-    </figure>
-  </a>
-  <a href="http://www.youtube.com/">
-    <figure onMouseUp="return showLoader()">
-      <img src="youtube.png">
-    </figure>
-  </a>
-  <a href="http://www.teslafi.com">
-    <figure onMouseUp="return showLoader()">
-      <img src="teslafi.png">
-    </figure>
-  </a>
-  <a href="https://app.plex.tv/desktop">
-    <figure onMouseUp="return showLoader()">
-      <img src="plex.png">
-    </figure>
-  </a>
-  <a href="https://abetterrouteplanner.com/">
-    <figure onMouseUp="return showLoader()">
-      <img width="100%" src="abrp.png">
-    </figure>
-  </a>
-  <a href="https://google.com/">
-    <figure>
-      <img width="100%" src="chrome.png">
-    </figure>
-  </a>
-  <a href="https://www.reddit.com/">
-    <figure onMouseUp="return showLoader()">
-      <img width="100%" src="reddit.png">
-    </figure>
-  </a>
-  <a href="http://maps.google.com/">
-    <figure onMouseUp="return showLoader()">
-      <img width="100%" src="google_maps.png">
-    </figure>
-  </a>
-</div>
-<div id="overlay" onClick="hide('overlay')">
-<input type="text" id="path" value="http://" onClick="window.event.stopPropagation();">
-</div>
-
-<div id="overlayfullscreen">
-<h2 id="fullscreen" ><span class="txt"><p onMouseDown="goFullScreenYoutube()">Redirecting... once loaded click <font color="#2793E6">GO TO SITE</font></p><p><br></p></span></h2>
-<h3 id="fullscreen" ><span class="txt"><p><input type="checkbox" onClick="document.cookie='noshow';">Don't show this again.</p>NOTE: Car must be in PARK</span></h2>
-</div>
-
-<div id="overlayfull" style="display:none;">
-  <br>
-  <br>
-  <br>
-<h3 id="full" onMouseDown="goFullScreen();"><span class="txt">ENABLE FULLSCREEN</span></h3>
-</div>
-</h3>
+  
+  <div>
+    
+    <a href="https://weather.com/en-CA/weather/today/l/CAXX0679:1:CA">
+      <figure onMouseUp="return showLoader()">
+        <img src="weather.png">
+      </figure>
+    </a>
+    <a href="http://www.youtube.com/">
+      <figure onMouseUp="return showLoader()">
+        <img src="youtube.png">
+      </figure>
+    </a>
+    <a href="http://www.teslafi.com">
+      <figure onMouseUp="return showLoader()">
+        <img src="teslafi.png">
+      </figure>
+    </a>
+    <a href="https://app.plex.tv/desktop">
+      <figure onMouseUp="return showLoader()">
+        <img src="plex.png">
+      </figure>
+    </a>
+    <a href="https://abetterrouteplanner.com/">
+      <figure onMouseUp="return showLoader()">
+        <img width="100%" src="abrp.png">
+      </figure>
+    </a>
+    <a href="https://google.com/">
+      <figure>
+        <img width="100%" src="chrome.png">
+      </figure>
+    </a>
+    <a href="https://www.reddit.com/">
+      <figure onMouseUp="return showLoader()">
+        <img width="100%" src="reddit.png">
+      </figure>
+    </a>
+    <a href="http://maps.google.com/">
+      <figure onMouseUp="return showLoader()">
+        <img width="100%" src="google_maps.png">
+      </figure>
+    </a>
+  </div>
+  <div id="overlay" onClick="hide('overlay')">
+    <input type="text" id="path" value="http://" onClick="window.event.stopPropagation();">
+  </div>
+  
+  <div id="overlayfullscreen">
+    <h2 id="fullscreen" ><span class="txt"><p onMouseDown="goFullScreenYoutube()">Redirecting... once loaded click <font color="#2793E6">GO TO SITE</font></p><p><br></p></span></h2>
+    <h3 id="fullscreen" ><span class="txt"><p><input type="checkbox" onClick="document.cookie='noshow';">Don't show this again.</p>NOTE: Car must be in PARK</span></h2>
+    </div>
+    
+    <div id="overlayfull" style="display:none;">
+      <br>
+      <br>
+      <br>
+      <h3 id="full" onMouseDown="goFullScreen();"><span class="txt">ENABLE FULLSCREEN</span></h3>
+    </div>
+  </h3>
 </div>
 
 <div id="loader">
-<div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-<h2 style="color: black;">Please wait...</h2>
+  <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+  <h2 style="color: black;">Please wait...</h2>
 </div>
 
 <script type="text/javascript" src="j.js"></script>
 
 </body>
-
-<!-- Mirrored from teslatheater.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 20 Jan 2020 17:56:15 GMT -->
 </html>
 
