--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <link rel="stylesheet" href="c.css">
-  <title>Tesla Theatre</title>
+  <title>Tesla Theater</title>
 </head>
 <body>
   
