--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <div id="loader">
   <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
-  <h2 style="color: black;">Please wait...</h2>
+  <h2 style="color: white;">Please wait...</h2>
 </div>
 
 <script type="text/javascript" src="j.js"></script>
